# Cauris-Ai

./: .gitignore  sample_content.txt
.github/workflows/: ci.yml
backend/: .gitignore  Dockerfile  check_qdrant.py  docker-compose.yml  pyproject.toml
backend/app/api/: deps.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  chat.py  documents.py
backend/app/core/: config.py  database.py  security.py  vector_db.py
backend/app/models/: base.py  chat.py  user.py
backend/app/service/: ingestion.py  rag_service.py  websocket_manager.py
frontend-chat/: package-lock.json  package.json  vite.config.ts
frontend-chat/src/: App.tsx  index.css  main.tsx
frontend-chat/src/components/: CaurisIcon.tsx  ChatRoom.tsx  Login.tsx  Signup.tsx
frontend-chat/src/services/: api.ts
mon_app/: pubspec.yaml
mon_app/lib/: main.dart
mon_app/lib/models/: user_model.dart
mon_app/lib/screens/: chat_screen.dart  login_screen.dart  signup_screen.dart
mon_app/lib/services/: auth_service.dart
mon_app/macos/Flutter/: GeneratedPluginRegistrant.swift
